# cortho

./: .gitignore  .travis.yml  LICENSE  README.md  cortho.cabal  stack.yaml
app/: Main.hs
src/Lang/: Cortho.hs
src/Lang/Cortho/: Heap.hs  Parser.hs  Prelude.hs  Types.hs
src/Lang/Cortho/TI/: Compiler.hs  Types.hs
test/: HeapSpec.hs  Spec.hs
