name:                cortho
version:             0.1.0.0
synopsis:            small, core functional language compiler
description:         Please see README.md
homepage:            http://github.com/benjaminfjones/cortho
license:             BSD2
license-file:        LICENSE
author:              Benjamin Jones
maintainer:          benjaminfjones@gmail.com
copyright:           2016 Benjamin Jones
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.Cortho
                     , Lang.Cortho.Parser
                     , Lang.Cortho.Prelude
                     , Lang.Cortho.Types
  build-depends:       base   >= 4.7    && < 5
                     , pretty >= 1.1.2  && < 2
                     , text   >= 1.2    && < 1.3
  default-language:    Haskell2010

executable cortho-cc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cortho
  default-language:    Haskell2010

test-suite cortho-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cortho
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/benjaminfjones/cortho
