name:                cortho
version:             0.1.0.0
synopsis:            small, core functional language compiler
description:         Please see README.md
homepage:            http://github.com/benjaminfjones/cortho
license:             BSD2
license-file:        LICENSE
author:              Benjamin Jones
maintainer:          benjaminfjones@gmail.com
copyright:           2016 - 2019 Benjamin Jones
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.Cortho
                     , Lang.Cortho.Heap
                     , Lang.Cortho.Parser
                     , Lang.Cortho.Prelude
                     , Lang.Cortho.Types
                     , Lang.Cortho.TI.Types
                     , Lang.Cortho.TI.Compiler
  build-depends:       base   >= 4.7     && < 5
                     , containers >= 0.5 && < 0.7
                     , parsec >= 3.1     && < 3.2
                     , pretty >= 1.1.2   && < 2
                     , text   >= 1.2     && < 1.3
  default-language:    Haskell2010

executable cortho-cc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cortho
  default-language:    Haskell2010

test-suite cortho-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HeapSpec
  build-depends:       base
                     , cortho
                     , parsec >= 3.1    && < 3.2
                     , tasty            >= 0.11           && < 2
                     , tasty-quickcheck >= 0.8            && < 2
                     , tasty-hunit      >= 0.9            && < 2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/benjaminfjones/cortho
